# fastapi_layerd_architecture_v2

./: .gitignore  README.md  alembic.ini  config.yml  main.py  pyproject.toml  run_server_local.py
core/application/dtos/: base.py  user_dto.py
core/application/services/: base_service.py
core/domain/entities/: user_entity.py
core/domain/enums/: user_enums.py
core/domain/repositories/: base.py
core/infrastructure/database/: database.py  session.py  unit_of_work.py
core/infrastructure/database/models/: user.py
core/infrastructure/di/: container.py
core/infrastructure/repositories/: base_repository.py
core/specs/: base.py  common.py
migrations/: env.py
server/: app.py
server/application/controllers/: user_controller.py
server/application/services/: user_service.py
server/infrastructure/di/: container.py
server/infrastructure/repositories/: user_repository.py
tests/: test_app_startup_and_di.py  test_managed_session.py  test_sample_endpoint_contract.py
